# labflow

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  MANUAL_RELEASE_STEPS.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: index.md
docs/concepts/: configs-and-overrides.md  env-resolvers.md  experiments.md  hpc-systems-registry.md  manifests.md  snakemake-integration.md
docs/contributing/: development.md
docs/design/: run-outputs-labels-and-scans.md
docs/examples/: ou-simulation.md  scaling.md
docs/getting-started/: first-experiment.md  first-slurm-submission.md  first-sweep.md  install.md
docs/guides/: migrating-from-nmsat.md
docs/guides/backends/: apptainer.md
docs/guides/systems/: arm.md  deucalion-arm.md  deucalion-gpu.md  deucalion-x86.md  gpu.md  local.md  x86.md
examples/balanced_random_network/: README.md  run.py
examples/scaling/: README.md  analyze.py
examples/scaling/experiments/: brn_scaling.py
src/labflow/: __init__.py  cli.py  context.py  manifest.py  registry.py  snakemake_hook.py
src/labflow/launchers/: __init__.py  local.py  slurm.py
src/labflow/resolvers/: __init__.py  apptainer.py  base.py  conda.py  pixi.py  poetry.py  uv.py  venv.py
src/labflow/templates/analysis-pipeline/: run.py
src/labflow/templates/hpo-optuna/: run.py
src/labflow/templates/hpo-ray/: run.py
src/labflow/templates/marimo-exploration/: run.py
src/labflow/templates/sbi-inference/: run.py
src/labflow/templates/simulation-jax/: README.md  run.py
src/labflow/templates/simulation-jaxley/: run.py
src/labflow/templates/simulation-nest/: README.md  run.py
src/labflow/templates/slurm/: base.sbatch.j2  cpu-mpi.sbatch.j2  cpu-openmp.sbatch.j2  gpu-multi.sbatch.j2  gpu-single.sbatch.j2  optuna-array.sbatch.j2
tests/integration/: test_cli.py
tests/unit/: test_cli_unit.py  test_launchers.py  test_manifest.py  test_registry.py  test_resolvers.py  test_snakemake_hook.py
