[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labflow"
version = "0.1.0"
description = "Opinionated scientific workflow manager — Hydra + Submitit + Snakemake glue for reproducible experiments and SLURM submission."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Renato Duarte", email = "rcfduarte@gmail.com"},
]
keywords = ["workflow", "slurm", "hpc", "reproducibility", "scientific-computing", "neuroscience"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "submitit>=1.5",
    "hydra-submitit-launcher>=1.2",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
    "gitpython>=3.1",
]

[project.optional-dependencies]
snakemake = ["snakemake>=8.0"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.5",
    "hypothesis>=6.92",
    "ruff>=0.4",
    "mypy>=1.8",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
]

[project.scripts]
labflow = "labflow.cli:main"

[project.urls]
Repository = "https://github.com/CNNC-Lab/labflow"
Documentation = "https://cnnc-lab.github.io/labflow/"
Issues = "https://github.com/CNNC-Lab/labflow/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/labflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["docs", "notebooks", "_archive", "deprecated", "src/labflow/templates"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "B008", "RUF001", "RUF002", "RUF003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_redundant_casts = true
warn_unused_ignores = true
